[package]
edition = "2021"
name = "julusian-image-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable napi feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.8", default-features = false, features = ["napi8"] }
napi-derive = "2.16.8"
image = { version = "0.25.1", default-features = false }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
