[package]
edition = "2021"
name = "julusian-image-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable napi feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.1.0", default-features = false, features = ["napi8"] }
napi-derive = "3.1.0"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }

[build-dependencies]
napi-build = "2.2.2"

[profile.release]
lto = true
